fixed bib file so that our paper can correctly display references

--- a/mics2015.bib
+++ b/mics2015.bib
@@ -24,10 +24,10 @@
  acmid = {997813},
  publisher = {Cambridge University Press},
  address = {New York, NY, USA},
-} 
+ } 
 
 
-@online{basic-clojure-info,
+@misc{basic-clojure-info,
 	Author = {briantdawn},
 	Date-Added = {2015-03-11 20:18:54 +0000},
 	Date-Modified = {2015-03-11 20:20:13 +0000},
@@ -35,7 +35,8 @@
 	Month = {March},
 	Title = {surviving-clojure},
 	Url = {https://github.com/clojurebridge-minneapolis/track2-surviving},
-	Year = {2015}}
+	Year = {2015},
+}
 
 @article{clojure-REPL,
 	Author = {Timothy O'Brien},
@@ -46,34 +47,38 @@
 	Month = {May},
 	Title = {Clojure's advantage: Immediate feedback with REPL},
 	Url = {http://radar.oreilly.com/2012/05/clojure-repl.html},
-	Year = {2012}}
+	Year = {2012},
+}
 
-@online{wikipedia-persistent,
+@misc{wikipedia-persistent,
 	Author = {Wikipedia},
 	Date-Added = {2015-03-11 20:15:41 +0000},
 	Date-Modified = {2015-03-11 20:16:31 +0000},
 	Lastchecked = {3/9/15},
 	Title = {Persistent Data Structure},
 	Url = {http://en.wikipedia.org/wiki/Persistent_data_structure},
-	Year = {2015}}
+	Year = {2015},
+}
 
-@online{clojure-datastructures,
+@misc{clojure-datastructures,
 	Author = {Rich Hickey},
 	Date-Added = {2015-03-11 20:13:55 +0000},
 	Date-Modified = {2015-03-11 20:15:10 +0000},
 	Lastchecked = {3/11/15},
 	Title = {Clojure - Data Structures},
 	Url = {http://clojure.org/data_structures},
-	Year = {2014}}
+	Year = {2014},
+}
 
-@online{clojure-home,
+@misc{clojure-home,
 	Author = {Rich Hickey},
 	Date-Added = {2015-03-11 20:09:08 +0000},
 	Date-Modified = {2015-03-11 20:16:38 +0000},
 	Lastchecked = {3/11/15},
 	Title = {Clojure},
 	Url = {http://clojure.org/},
-	Year = {2014}}
+	Year = {2014},
+}
 
 @inproceedings{Hickey:2008,
 	Acmid = {1408682},
@@ -92,19 +97,22 @@
 	Url = {http://doi.acm.org.ezproxy.morris.umn.edu/10.1145/1408681.1408682},
 	Year = {2008},
 	Bdsk-Url-1 = {http://doi.acm.org.ezproxy.morris.umn.edu/10.1145/1408681.1408682},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1145/1408681.1408682}}
+	Bdsk-Url-2 = {http://dx.doi.org/10.1145/1408681.1408682},
+}
 
 @misc{Pmap,
 	Author = {Kim, Zachary},
 	Howpublished = {\url{http://clojuredocs.org/clojure_core/clojure.core/pmap}},
 	Title = {ClojureDocs - pmap},
-	Year = {2010}}
-	
-@online{LeinGitHub,
-	Author = {Phil Hagelberg, Alex Osborne, Dan Larkin, and contributors},
+	Year = {2010},
+}
+
+@misc{LeinGitHub,
+	Author = {Hagelberg, Phil and Osborne, Alex and Larkin, Dan and contributors},
 	Date-Added = {2005},
 	Date-modified{2015},
-	Lastchecked = {3/20/2015},
+	Lastchecked = {3/20/15},
 	Title = {leiningen},
 	Url = {https://github.com/technomancy/leiningen},
-	Year = {2015}}
+	Year = {2015},
+}
