An attempt at fixing the bibliography.

--- a/mics2015.bib
+++ b/mics2015.bib
@@ -119,9 +119,9 @@
 @misc{LeinGitHub,
 	Author = {Hagelberg, Phil and Osborne, Alex and Larkin, Dan and contributors},
 	Date-Added = {2005},
-	Date-modified{2015},
+	Date-modified = {2015},
 	Lastchecked = {3/20/15},
-	Title = {leiningen},
-	Url = {https://github.com/technomancy/leiningen},
+	Title = {Leiningen Readme},
+	Howpublished = {https://github.com/technomancy/leiningen},
 	Year = {2015},
 }
